openvas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weakspotter-openvas
  namespace: weakspotter-common
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: weakspotter-openvas
  template:
    metadata:
      labels:
        app: weakspotter-openvas
    spec:
      containers:
        - name: openvas
          image: securecompliance/gvm:latest
          resources:
            limits:
              cpu: "2"
            requests:
              cpu: "0"
          ports:
            - containerPort: 9392
          volumeMounts:
            - name: postgres-db
              mountPath: /opt/database
            - name: openvas-plugins
              mountPath: /var/lib/openvas/plugins
            - name: gvm-data
              mountPath: /var/lib/gvm
            - name: ssh-config
              mountPath: /etc/ssh
      volumes:
        - name: postgres-db
          hostPath:
            path: /mnt/appdata/openvas/postgres-db
        - name: openvas-plugins
          hostPath:
            path: /mnt/appdata/openvas/openvas-plugins
        - name: gvm-data
          hostPath:
            path: /mnt/appdata/openvas/gvm
        - name: ssh-config
          hostPath:
            path: /mnt/appdata/openvas/ssh
