openvas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weakspotter-openvas
  namespace: weakspotter-common

spec:
  ports:
    - port: 9392
      targetPort: 9392
  selector:
    app: weakspotter-openvas
  type: ClusterIP
