openvas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weakspotter-openvas-ingress
  namespace: common
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - openvas.weakspotter.ozeliurs.com
      secretName: weakspotter-openvas-tls
  rules:
    - host: openvas.weakspotter.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weakspotter-openvas
                port:
                  number: 5000
